<resources>
    <string name="app_name">TaskPlanner</string>

    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!-- Main Menu-->
    <string name="menu_delete_all_tasks">Delete all tasks</string>
    <string name="all_tasks_deleted">All tasks deleted.</string>
    <string name="show_created">Show created tasks.</string>
    <string name="show_in_progress">Show in progress tasks.</string>
    <string name="show_closed">Show finished tasks.</string>
    <string name="title_asc">Order by title asc.</string>
    <string name="title_desc">Order by title desc.</string>
    <string name="created_asc">Order by date of creation asc.</string>
    <string name="created_desc">Order by date of creation desc.</string>
    <string name="due_date_asc">Order by due date asc.</string>
    <string name="due_date_desc">Order by due date desc.</string>


    <!-- Bottom Navigation Menu-->
    <string name="tasks_page">Tasks</string>
    <string name="categories_page">Categories</string>

    <!-- Main Activity-->
    <!-- Task List Fragment-->
    <string name="add_task">Add task</string>
    <string name="task_deleted">Task was deleted.</string>
    <string name="alert_delete_title">Delete all task</string>
    <string name="alert_delete_message">Do you want to delete all tasks?</string>

    <!-- New Task Activity -->
    <string name="activity_new_task_title">New Task</string>
    <string name="activity_edit_task_title">Detail Task</string>
    <string name="add_title">Title</string>
    <string name="hint_task">Task…</string>
    <string name="add_description">Description</string>
    <string name="hint_description">Description…</string>
    <string name="add_date">Due date and time</string>
    <string name="category">Category</string>
    <string name="hint_date">Pick date (dd.mm.yyyy hh:mm)</string>
    <string name="choose_state">Change state of task</string>
    <string name="created">Created</string>
    <string name="in_progress">In progress</string>
    <string name="closed">Finished</string>
    <string name="set_reminder">Reminder</string>
    <string name="clear">Clear</string>
    <string name="to_do_list">To Do List</string>
    <string name="button_save">Save</string>
    <string name="reminder_text">Your task %1$s is due to %2$s.</string>
    <!-- ToDoList-->
    <string name="add_to_do">Add To Do</string>
    <string name="edit_to_do">Edit To Do</string>
    <!-- Toasts-->
    <string name="empty_not_saved">Task not saved because it is empty.</string>
    <string name="new_task_wrong_date">Wrong datetime format.</string>
    <string name="new_task_no_title">Title is missing.</string>
    <string name="wrong_date">Date and time must be bigger than current date and time.</string>
    <string name="wrong_date_reminder">Date and time must be less than due date time.</string>
    <string name="reminder_cannot_set">Due date must be set.</string>

    <!-- Category Activity-->
    <string name="category_deleted">Category was deleted.</string>

    <!-- Category Menu-->
    <string name="menu_delete_all_categories">Delete all categories</string>
    <string name="all_categories_deleted">All categories deleted.</string>
    <string name="alert_delete_title_category">Delete all categories</string>
    <string name="alert_delete_message_category">Do you want to delete all categories?</string>

    <!-- New Category Activity-->
    <string name="activity_new_category_title">New Category</string>
    <string name="activity_edit_category_title">Detail Category</string>
    <string name="abbr">Abbreviation</string>
    <string name="hint_abbr">ABBR...</string>
    <!-- Toasts-->
    <string name="empty_not_saved_cat">Category not saved because it is empty.</string>
    <string name="new_category_no_abbr">Abbreviation is missing.</string>
    <string name="new_category_no_title">Title is missing.</string>

    <!-- Notification-->
    <string name="channel_name">My notification</string>
    <string name="channel_description">Description</string>

    <!-- Edit Task and Category dates-->
    <string name="date_created">Created: </string>
    <string name="date_in_progress">In Progress: </string>
    <string name="date_closed">Finished: </string>

</resources>