<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="all" >
        <item
            android:id="@+id/show_created"
            android:title="@string/show_created" />

        <item
            android:id="@+id/show_in_progress"
            android:title="@string/show_in_progress" />
        <item
            android:id="@+id/show_closed"
            android:title="@string/show_closed"/>
    </group>

    <group android:checkableBehavior="single" >
        <item
            android:id="@+id/title_asc"
            android:title="@string/title_asc" />
        <item
            android:id="@+id/title_desc"
            android:title="@string/title_desc" />
        <item
            android:id="@+id/created_asc"
            android:title="@string/created_asc"/>
        <item
            android:id="@+id/created_desc"
            android:title="@string/created_desc"/>
        <item
            android:id="@+id/due_date_asc"
            android:title="@string/due_date_asc"/>
        <item
            android:id="@+id/due_date_desc"
            android:title="@string/due_date_desc"/>
    </group>

    <group>
        <item
            android:id="@+id/delete_all_tasks"
            android:title="@string/menu_delete_all_tasks"
            app:showAsAction="never"/>
    </group>
</menu>