<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".NewCategoryActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/abbr"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="150dp"/>

        <EditText
            android:id="@+id/edit_text_abbr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_abbr"
            android:maxLength="5"
            android:inputType="textCapCharacters"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>

        <EditText
            android:id="@+id/edit_text_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_task"
            android:inputType="textCapSentences"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_description"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>

        <EditText
            android:id="@+id/edit_text_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_description"
            android:inputType="textMultiLine"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"/>

    </LinearLayout>

</ScrollView>