<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".NewTaskActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="100dp"/>

        <EditText
            android:id="@+id/edit_text_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_task"
            android:inputType="textCapSentences"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_description"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>

        <EditText
            android:id="@+id/edit_text_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_description"
            android:inputType="textMultiLine"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" />

        <Spinner
            android:id="@+id/spinner_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_date"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp">
            <TextView
                android:id="@+id/edit_text_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_gravity="start"
                android:layout_weight="1"
                android:hint="@string/hint_date"/>

            <Button
                android:id="@+id/due_date_clear"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/clear"
                android:background="@drawable/outlined_button"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/set_reminder"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp">
            <TextView
                android:id="@+id/edit_text_reminder"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_weight="1"
                android:hint="@string/hint_date"/>

            <Button
                android:id="@+id/reminder_clear"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/clear"
                android:background="@drawable/outlined_button"/>
        </LinearLayout>

    </LinearLayout>

</ScrollView>