<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".EditTaskActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_view_created"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:paddingEnd="10dp"/>
        <TextView
            android:id="@+id/text_view_in_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:paddingRight="10dp"/>
        <TextView
            android:id="@+id/text_view_finished"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:paddingRight="10dp"/>

        <TextView
            android:id="@+id/text_view_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_state"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginEnd="20dp"
                tools:ignore="UseCompoundDrawables">
                <ImageView
                    android:id="@+id/image_view_state_1"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_round_created_24"
                    android:contentDescription="@string/created"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/created"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginEnd="20dp"
                tools:ignore="UseCompoundDrawables">
                <ImageView
                    android:id="@+id/image_view_state_2"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_baseline_in_progress_24"
                    android:contentDescription="@string/in_progress" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/in_progress"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                tools:ignore="UseCompoundDrawables">
                <ImageView
                    android:id="@+id/image_view_state_3"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_baseline_closed_24"
                    android:contentDescription="@string/closed" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/closed"/>
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>

        <EditText
            android:id="@+id/edit_text_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_task"
            android:inputType="textCapSentences"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_description"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>

        <EditText
            android:id="@+id/edit_text_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_description"
            android:inputType="textMultiLine"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" />

        <Spinner
            android:id="@+id/spinner_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_date"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp">
                <TextView
                    android:id="@+id/edit_text_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:layout_gravity="start"
                    android:layout_weight="1"
                    android:hint="@string/hint_date"/>

                <Button
                    android:id="@+id/due_date_clear"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:text="@string/clear"
                    android:background="@drawable/outlined_button"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/set_reminder"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp">
            <TextView
                android:id="@+id/edit_text_reminder"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_weight="1"
                android:hint="@string/hint_date"/>

                <Button
                    android:id="@+id/reminder_clear"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:text="@string/clear"
                    android:background="@drawable/outlined_button"/>
        </LinearLayout>

    </LinearLayout>

</ScrollView>